# PMI_F_2_H_AiSD

./: CMakeLists.txt  README.md  test.c  test.cpp
AiSD_C/: bucket_sort.c  k_statistik.c  k_statistil.cpp  lin_logsort.c  merge_sort.c  merge_sort.cpp  search_inversion.c  square_sort.c
DynamicProgramming/: 5_seating_passengers.cpp  6_vasya_constructor_numbers.cpp
Graphs/: 1_modules.cpp  2_maze.cpp  3_.cpp  3_bureaucracy.cpp  4_eulerianCycle.cpp  5_b.cpp
Hashmap&AVL/: 1.cpp  2.cpp
Heap/: 1_Bottle_all.cpp  2_greedy_sequence.cpp  3.cpp  4_heapsort.cpp
Main/: 1_Bottle_all.cpp  1_stairs.cpp  2_greedy_sequence.cpp  2_nails.cpp  3.cpp  3_piggy_bank.cpp  4_.cpp  4_largest_subsequence.cpp  6_.cpp  6_vasya_constructor_numbers.cpp  7_.cpp
Permutations/: 1_Permutations.cpp  2_Answers_the_test.cpp  3_SwapAmount.cpp  7_.cpp  7_hot-keys[NOT SOLVED].cpp
WeightedGraphs/: 1-2_Dijkstra.cpp  3_SST.cpp  4_Floyd-Warshall.cpp
